code/tui/src/app/inline/snapshots/app__inline__tests__model_list.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: text(&buffer)
---
─ Model ────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search models                                                                                │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
> GPT Test    ← ◼◼◼ → Medium                                                                        
                                                                                                    
  ↑↓ select · ←→ effort · / search · P pin/unpin · Enter apply · Esc cancel
