code/tui/src/app/inline/snapshots/app__inline__tests__panel_search_with_pending_custom_answer.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: "text(&render(&app, 50, 16))"
---
                                                  
    ▄  ▄     Ash Code v0.1.0                      
  ▗█▛██▜█▖   Automatic model                      
  ▝▜████▛▘   .                                    
    ▝  ▘                                          
                                                  
                                                  
─ Config ─────────────────────────────────────────
                                                  
   General    Providers    Issues                 
  ╭────────────────────────────────────────────╮  
  │ Screen mode                                │  
  ╰────────────────────────────────────────────╯  
  Screen mode                           inline    
                                                  
  Enter/Esc/Ctrl+C to return
