code/tui/src/app/inline/snapshots/app__inline__tests__panel_with_pending_query.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: "text(&render(&app, 50, 16))"
---
                                                  
    ▄  ▄     Ash Code v0.1.0                      
  ▗█▛██▜█▖   Automatic model                      
  ▝▜████▛▘   .                                    
    ▝  ▘                                          
                                                  
                                                  
                                                  
                                                  
─ Help ───────────────────────────────────────────
                                                  
   Commands                                       
  First                                           
> Second                                          
                                                  
  Tab/Shift+Tab to switch  ·  Esc to close
