code/tui/src/app/inline/snapshots/app__inline__tests__subscription_error_dialog.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: text(&buffer)
---
─ Kimi › Error ─────────────────────────────────────────────────────────────────
                                                                                
  Kimi token exchange failed with HTTP 400                                      
                                                                                
  Enter/Esc to close
