code/tui/src/app/inline/snapshots/app__inline__tests__voice_listening.snap
---
source: code/tui/src/app/inline/frame_tests.rs
assertion_line: 74
expression: text(&buffer)
---
                                                                                
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
                                                                                
  Voice · listening · /voice to stop
