code/tui/src/app/inline/snapshots/app__inline__tests__voice_model_downloading_zh.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: "text(&render(&app, 80, 20))"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
                                                                                
  语音 · 正在下载 encoder.onnx：2.0 MiB
